# hdcomm

./: Cargo.toml  README.md  TODO  build.rs  hdcomm.toml
hdcomm-core/: Cargo.toml
hdcomm-core/src/: lib.rs  message.rs  rpc.rs  stream.rs
hdcomm-core/src/rpc/: application.rs  control.rs  mod.rs
hdcomm-core/src/stream/: application.rs  mod.rs
hdcomm-device/: Cargo.toml
hdcomm-device/src/: lib.rs
hdcomm-host/: Cargo.toml
hdcomm-host/src/: channel.rs  codec.rs  error.rs  lib.rs  proxy.rs  router.rs
proto/: hdcomm.proto
src/: ahrs.rs  config.rs  lib.rs  model.rs  server.rs  stream.rs
