[package]
name = "hdcomm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "hdcomm-core",
    "hdcomm-device",
    "hdcomm-host",
]

[dependencies]
"hdcomm-core" = { path = "hdcomm-core" }
"hdcomm-device" = { path = "hdcomm-device" }
"hdcomm-host" = { path = "hdcomm-host" }
tokio = { version = "1.10.0", features = ["full"] }
s_curve_tiny = { git = "https://github.com/shenghaoyang/s_curve.git", branch = "big_no_std_hack" }
clap = "2.33.3"
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "1.0.26"
log = "0.4"
tonic = "0.5"
prost = "0.8"
tokio-serial = "5.4.1"
toml = "0.5.8"
config = "0.11"
prost-types = "0.8.0"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.5"
