[package]
name = "hdcomm-device"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "0.7.2", features = ["default"] }
hdcomm-core = { path = "../hdcomm-core" }
heapless = "0.7.5"
serde = { version = "1.0", default_features = false, features = ["derive"] }
