[package]
name = "hdcomm-host"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdcomm-core = { path = "../hdcomm-core" }
tokio-serial = "5.4.1"
tokio = { version = "1.10.0", features = ["full"] }
thiserror = "1.0.26"
async-trait = "0.1.51"
postcard = { version = "0.7.2", features = ["default", "use-std"] }
tokio-util = { version = "0.6.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0.1"
futures = "0.3.16"
